css/app.css
/*
*
* Variables
*
*/

:root {
  --main-bkg: #ffffff;
  --board-bkg-top: #02ccba;
  --board-bkg-bottom: #aa7ecd;
  --card-back: #2e3d49;
  --card-front: #02b3e4;
  --deck-shadow: rgba(46, 61, 73, 0.5);
  --match-correct: #02ccba;
  --match-wrong: #bbbbbb;
  --icons: #ffffff;
  --modal-overlay: rgba(0,0,0,0.4);
  --modal-bkg: #fefefe;
  --modal-button: #aaa;
}


/*
*
* Base Styles
*
*/

html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background: var(--main-bkg) url(../img/geometry2.png); /* Background pattern from Subtle Patterns */
    font-family: 'Coda', cursive;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}


/*
 * PAGE CONTENT WRAPPER
 */

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}


/*
 * DECK
 */

.deck {
    width: 346px;
    min-height: 1288px;
    background: linear-gradient(160deg, var(--board-bkg-top) 0%, var(--board-bkg-bottom) 100%);
    padding: 32px;
    border-radius: 10px;
    box-shadow: 12px 15px 20px 0 var(--deck-shadow);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 3em;
}

.deck .card {
    height: 125px;
    width: 125px;
    background: var(--card-back);
    font-size: 0;
    color: var(--icons);
    border-radius: 8px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 5px 2px 20px 0 var(--deck-shadow);
}

.deck .card.open {
    transform: rotateY(0);
    background: var(--card-front);
    cursor: default;
}

.deck .card.show {
    font-size: 33px;
}

.deck .card.match {
    cursor: default;
    background: var(--match-correct);
    font-size: 33px;
}


/*
 * SCORE PANNEL
 */

.score-panel {
    text-align: left;
    width: 346px;;
    margin-bottom: 10px;
    display: inline-flex;
    justify-content: space-around;
}

.score-panel .stars {
    margin: 0;
    padding: 0;
    align-self: flex-end;
    margin: 0 5px 0 0;
}

.score-panel .stars li {
    list-style: none;
    display: inline-block;
}

.score-panel .moves{
    list-style: none;
    align-self: flex-end;
}

.score-panel .timer {
    align-self: flex-end;
    cursor: pointer;
    margin: 0;
}

.score-panel .restart {
    align-self: flex-end;
    cursor: pointer;
}


/*
 * WIN MODAL
 */

.win-modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: var(--modal-overlay);
}

.win-modal-content {
    background-color: var(--modal-bkg);
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
}

.play-again {
    color: var(--modal-button);
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.play-again:hover,
.play-again:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}


/*
*
* Media Queries
*
*/

@media screen and (min-width: 660px) {
  .deck {
      width: 660px;
      min-height: 680px;
      padding: 32px;
      margin: 0 0 3em;
  }

  .score-panel {
      text-align: left;
      width: 660px;
  }

}

